JSWD-290 Header Shifting Issue Upon Closing and Reopening Popup

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -36,14 +36,4 @@ $marquee-elements-displayed-sm: 1;
 $marquee-elements-displayed-md: 2.25;
 $marquee-element-width-sm: calc($marquee-width / $marquee-elements-displayed-sm);
 $marquee-element-width-md: calc($marquee-width / $marquee-elements-displayed-md);
-$jo-sectional-heading-background-color: #f2f2f2;
-$jo-black: #000000;
-$jo-action-icon-color: #7d7d7d;
-$jo-primary-color: #44A3DF;
-$font-size-20px: 1.667rem;
-$jo-success-popup-heading             : #5dad02;
-$jo-warning-popup-heading             : #ff9e00;
-$jo-failure-popup-heading             : #cf011c;
-$jo-white                             : #ffffff;
-$jo-border-color                      : #cccccc;
 // $marquee-animation-duration: calc($marquee-elements-displayed * 15s);
